parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> decSeq
Rule 2     dec -> varDec
Rule 3     dec -> ID LPAREN paramList RPAREN LCHAVES block RCHAVES
Rule 4     dec -> type ID LPAREN paramList RPAREN LCHAVES block RCHAVES
Rule 5     varDec -> type varSpecSeq PONTOVIRGULA
Rule 6     varSpec -> ID
Rule 7     varSpec -> ID IGUAL_ATRIB literal
Rule 8     varSpec -> ID LCOL NUMBER RCOL
Rule 9     varSpec -> ID LCOL NUMBER RCOL IGUAL_ATRIB LCHAVES literalSeq RCHAVES
Rule 10    type -> INT
Rule 11    type -> STRING
Rule 12    type -> BOOL
Rule 13    param -> type ID
Rule 14    param -> type ID LCOL RCOL
Rule 15    block -> varDecList stmtList
Rule 16    stmt -> ifStmt
Rule 17    stmt -> whileStmt
Rule 18    stmt -> forStmt
Rule 19    stmt -> breakStmt
Rule 20    stmt -> returnStmt
Rule 21    stmt -> readStmt
Rule 22    stmt -> writeStmt
Rule 23    stmt -> assign PONTOVIRGULA
Rule 24    stmt -> subCall PONTOVIRGULA
Rule 25    ifStmt -> IF LPAREN exp RPAREN LCHAVES block RCHAVES
Rule 26    ifStmt -> IF LPAREN exp RPAREN LCHAVES block RCHAVES ELSE LCHAVES block RCHAVES
Rule 27    whileStmt -> WHILE LPAREN exp RPAREN LCHAVES block RCHAVES
Rule 28    forStmt -> FOR LPAREN assign PONTOVIRGULA exp PONTOVIRGULA assign RPAREN LCHAVES block RCHAVES
Rule 29    breakStmt -> BREAK PONTOVIRGULA
Rule 30    readStmt -> READ var PONTOVIRGULA
Rule 31    writeStmt -> WRITE expList PONTOVIRGULA
Rule 32    returnStmt -> RETURN PONTOVIRGULA
Rule 33    returnStmt -> RETURN exp PONTOVIRGULA
Rule 34    subCall -> ID LPAREN expList RPAREN
Rule 35    assign -> var IGUAL_ATRIB exp
Rule 36    assign -> var INCREMENTO exp
Rule 37    assign -> var DECREMENTO exp
Rule 38    assign -> var MULT_ATRIB exp
Rule 39    assign -> var DIV_ATRIB exp
Rule 40    assign -> var MOD_IGUAL exp
Rule 41    var -> ID
Rule 42    var -> ID LCOL exp RCOL
Rule 43    exp -> opBinaria
Rule 44    exp -> NEGACAO exp
Rule 45    exp -> exp TERN_IF exp TERN_ELSE exp
Rule 46    exp -> subCall
Rule 47    exp -> var
Rule 48    exp -> literal
Rule 49    exp -> LPAREN exp RPAREN
Rule 50    opBinaria -> exp PLUS exp
Rule 51    opBinaria -> exp MINUS exp
Rule 52    opBinaria -> exp TIMES exp
Rule 53    opBinaria -> exp DIVIDE exp
Rule 54    opBinaria -> exp MOD exp
Rule 55    opBinaria -> exp IGUAL_COMP exp
Rule 56    opBinaria -> exp DIFERENTE exp
Rule 57    opBinaria -> exp MENOR exp
Rule 58    opBinaria -> exp MENOR_IGUAL exp
Rule 59    opBinaria -> exp MAIOR exp
Rule 60    opBinaria -> exp MAIOR_IGUAL exp
Rule 61    opBinaria -> exp OU_LOGICO exp
Rule 62    opBinaria -> exp E_LOGICO exp
Rule 63    literal -> NUMBER
Rule 64    literal -> CADEIA_CHAR
Rule 65    literal -> TRUE
Rule 66    literal -> FALSE
Rule 67    paramList -> paramSeq
Rule 68    paramList -> empty
Rule 69    paramSeq -> param VIRGULA paramSeq
Rule 70    paramSeq -> param
Rule 71    varDecList -> varDec varDecList
Rule 72    varDecList -> empty
Rule 73    varSpecSeq -> varSpec VIRGULA varSpecSeq
Rule 74    varSpecSeq -> varSpec
Rule 75    decSeq -> dec decSeq
Rule 76    decSeq -> dec
Rule 77    stmtList -> stmt stmtList
Rule 78    stmtList -> empty
Rule 79    literalSeq -> literal VIRGULA literalSeq
Rule 80    literalSeq -> literal
Rule 81    expList -> expSeq
Rule 82    expList -> empty
Rule 83    expSeq -> exp VIRGULA expSeq
Rule 84    expSeq -> exp
Rule 85    empty -> <empty>

Terminals, with rules where they appear

BOOL                 : 12
BREAK                : 29
CADEIA_CHAR          : 64
DECREMENTO           : 37
DIFERENTE            : 56
DIVIDE               : 53
DIV_ATRIB            : 39
ELSE                 : 26
E_LOGICO             : 62
FALSE                : 66
FOR                  : 28
ID                   : 3 4 6 7 8 9 13 14 34 41 42
IF                   : 25 26
IGUAL_ATRIB          : 7 9 35
IGUAL_COMP           : 55
INCREMENTO           : 36
INT                  : 10
LCHAVES              : 3 4 9 25 26 26 27 28
LCOL                 : 8 9 14 42
LPAREN               : 3 4 25 26 27 28 34 49
MAIOR                : 59
MAIOR_IGUAL          : 60
MENOR                : 57
MENOR_IGUAL          : 58
MINUS                : 51
MOD                  : 54
MOD_IGUAL            : 40
MULT_ATRIB           : 38
NEGACAO              : 44
NUMBER               : 8 9 63
OU_LOGICO            : 61
PLUS                 : 50
PONTOVIRGULA         : 5 23 24 28 28 29 30 31 32 33
RCHAVES              : 3 4 9 25 26 26 27 28
RCOL                 : 8 9 14 42
READ                 : 30
RETURN               : 32 33
RPAREN               : 3 4 25 26 27 28 34 49
STRING               : 11
TERN_ELSE            : 45
TERN_IF              : 45
TIMES                : 52
TRUE                 : 65
VIRGULA              : 69 73 79 83
WHILE                : 27
WRITE                : 31
error                : 

Nonterminals, with rules where they appear

assign               : 23 28 28
block                : 3 4 25 26 26 27 28
breakStmt            : 19
dec                  : 75 76
decSeq               : 1 75
empty                : 68 72 78 82
exp                  : 25 26 27 28 33 35 36 37 38 39 40 42 44 45 45 45 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 83 84
expList              : 31 34
expSeq               : 81 83
forStmt              : 18
ifStmt               : 16
literal              : 7 48 79 80
literalSeq           : 9 79
opBinaria            : 43
param                : 69 70
paramList            : 3 4
paramSeq             : 67 69
program              : 0
readStmt             : 21
returnStmt           : 20
stmt                 : 77
stmtList             : 15 77
subCall              : 24 46
type                 : 4 5 13 14
var                  : 30 35 36 37 38 39 40 47
varDec               : 2 71
varDecList           : 15 71
varSpec              : 73 74
varSpecSeq           : 5 73
whileStmt            : 17
writeStmt            : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decSeq
    (75) decSeq -> . dec decSeq
    (76) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . ID LPAREN paramList RPAREN LCHAVES block RCHAVES
    (4) dec -> . type ID LPAREN paramList RPAREN LCHAVES block RCHAVES
    (5) varDec -> . type varSpecSeq PONTOVIRGULA
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    ID              shift and go to state 9
    INT             shift and go to state 2
    STRING          shift and go to state 6
    BOOL            shift and go to state 5

    varDec                         shift and go to state 1
    decSeq                         shift and go to state 3
    program                        shift and go to state 4
    dec                            shift and go to state 7
    type                           shift and go to state 8

state 1

    (2) dec -> varDec .

    ID              reduce using rule 2 (dec -> varDec .)
    INT             reduce using rule 2 (dec -> varDec .)
    STRING          reduce using rule 2 (dec -> varDec .)
    BOOL            reduce using rule 2 (dec -> varDec .)
    $end            reduce using rule 2 (dec -> varDec .)


state 2

    (10) type -> INT .

    ID              reduce using rule 10 (type -> INT .)


state 3

    (1) program -> decSeq .

    $end            reduce using rule 1 (program -> decSeq .)


state 4

    (0) S' -> program .



state 5

    (12) type -> BOOL .

    ID              reduce using rule 12 (type -> BOOL .)


state 6

    (11) type -> STRING .

    ID              reduce using rule 11 (type -> STRING .)


state 7

    (75) decSeq -> dec . decSeq
    (76) decSeq -> dec .
    (75) decSeq -> . dec decSeq
    (76) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . ID LPAREN paramList RPAREN LCHAVES block RCHAVES
    (4) dec -> . type ID LPAREN paramList RPAREN LCHAVES block RCHAVES
    (5) varDec -> . type varSpecSeq PONTOVIRGULA
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    $end            reduce using rule 76 (decSeq -> dec .)
    ID              shift and go to state 9
    INT             shift and go to state 2
    STRING          shift and go to state 6
    BOOL            shift and go to state 5

    varDec                         shift and go to state 1
    decSeq                         shift and go to state 10
    dec                            shift and go to state 7
    type                           shift and go to state 8

state 8

    (4) dec -> type . ID LPAREN paramList RPAREN LCHAVES block RCHAVES
    (5) varDec -> type . varSpecSeq PONTOVIRGULA
    (73) varSpecSeq -> . varSpec VIRGULA varSpecSeq
    (74) varSpecSeq -> . varSpec
    (6) varSpec -> . ID
    (7) varSpec -> . ID IGUAL_ATRIB literal
    (8) varSpec -> . ID LCOL NUMBER RCOL
    (9) varSpec -> . ID LCOL NUMBER RCOL IGUAL_ATRIB LCHAVES literalSeq RCHAVES

    ID              shift and go to state 13

    varSpec                        shift and go to state 11
    varSpecSeq                     shift and go to state 12

state 9

    (3) dec -> ID . LPAREN paramList RPAREN LCHAVES block RCHAVES

    LPAREN          shift and go to state 14


state 10

    (75) decSeq -> dec decSeq .

    $end            reduce using rule 75 (decSeq -> dec decSeq .)


state 11

    (73) varSpecSeq -> varSpec . VIRGULA varSpecSeq
    (74) varSpecSeq -> varSpec .

    VIRGULA         shift and go to state 15
    PONTOVIRGULA    reduce using rule 74 (varSpecSeq -> varSpec .)


state 12

    (5) varDec -> type varSpecSeq . PONTOVIRGULA

    PONTOVIRGULA    shift and go to state 16


state 13

    (4) dec -> type ID . LPAREN paramList RPAREN LCHAVES block RCHAVES
    (6) varSpec -> ID .
    (7) varSpec -> ID . IGUAL_ATRIB literal
    (8) varSpec -> ID . LCOL NUMBER RCOL
    (9) varSpec -> ID . LCOL NUMBER RCOL IGUAL_ATRIB LCHAVES literalSeq RCHAVES

    LPAREN          shift and go to state 19
    VIRGULA         reduce using rule 6 (varSpec -> ID .)
    PONTOVIRGULA    reduce using rule 6 (varSpec -> ID .)
    IGUAL_ATRIB     shift and go to state 18
    LCOL            shift and go to state 17


state 14

    (3) dec -> ID LPAREN . paramList RPAREN LCHAVES block RCHAVES
    (67) paramList -> . paramSeq
    (68) paramList -> . empty
    (69) paramSeq -> . param VIRGULA paramSeq
    (70) paramSeq -> . param
    (85) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID LCOL RCOL
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    RPAREN          reduce using rule 85 (empty -> .)
    INT             shift and go to state 2
    STRING          shift and go to state 6
    BOOL            shift and go to state 5

    paramSeq                       shift and go to state 20
    param                          shift and go to state 22
    paramList                      shift and go to state 21
    type                           shift and go to state 24
    empty                          shift and go to state 23

state 15

    (73) varSpecSeq -> varSpec VIRGULA . varSpecSeq
    (73) varSpecSeq -> . varSpec VIRGULA varSpecSeq
    (74) varSpecSeq -> . varSpec
    (6) varSpec -> . ID
    (7) varSpec -> . ID IGUAL_ATRIB literal
    (8) varSpec -> . ID LCOL NUMBER RCOL
    (9) varSpec -> . ID LCOL NUMBER RCOL IGUAL_ATRIB LCHAVES literalSeq RCHAVES

    ID              shift and go to state 26

    varSpec                        shift and go to state 11
    varSpecSeq                     shift and go to state 25

state 16

    (5) varDec -> type varSpecSeq PONTOVIRGULA .

    INT             reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    STRING          reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    BOOL            reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    IF              reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    WHILE           reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    FOR             reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    BREAK           reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    RETURN          reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    READ            reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    WRITE           reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    ID              reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    RCHAVES         reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    $end            reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)


state 17

    (8) varSpec -> ID LCOL . NUMBER RCOL
    (9) varSpec -> ID LCOL . NUMBER RCOL IGUAL_ATRIB LCHAVES literalSeq RCHAVES

    NUMBER          shift and go to state 27


state 18

    (7) varSpec -> ID IGUAL_ATRIB . literal
    (63) literal -> . NUMBER
    (64) literal -> . CADEIA_CHAR
    (65) literal -> . TRUE
    (66) literal -> . FALSE

    NUMBER          shift and go to state 29
    CADEIA_CHAR     shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 28

    literal                        shift and go to state 30

state 19

    (4) dec -> type ID LPAREN . paramList RPAREN LCHAVES block RCHAVES
    (67) paramList -> . paramSeq
    (68) paramList -> . empty
    (69) paramSeq -> . param VIRGULA paramSeq
    (70) paramSeq -> . param
    (85) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID LCOL RCOL
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    RPAREN          reduce using rule 85 (empty -> .)
    INT             shift and go to state 2
    STRING          shift and go to state 6
    BOOL            shift and go to state 5

    paramSeq                       shift and go to state 20
    param                          shift and go to state 22
    paramList                      shift and go to state 33
    type                           shift and go to state 24
    empty                          shift and go to state 23

state 20

    (67) paramList -> paramSeq .

    RPAREN          reduce using rule 67 (paramList -> paramSeq .)


state 21

    (3) dec -> ID LPAREN paramList . RPAREN LCHAVES block RCHAVES

    RPAREN          shift and go to state 34


state 22

    (69) paramSeq -> param . VIRGULA paramSeq
    (70) paramSeq -> param .

    VIRGULA         shift and go to state 35
    RPAREN          reduce using rule 70 (paramSeq -> param .)


state 23

    (68) paramList -> empty .

    RPAREN          reduce using rule 68 (paramList -> empty .)


state 24

    (13) param -> type . ID
    (14) param -> type . ID LCOL RCOL

    ID              shift and go to state 36


state 25

    (73) varSpecSeq -> varSpec VIRGULA varSpecSeq .

    PONTOVIRGULA    reduce using rule 73 (varSpecSeq -> varSpec VIRGULA varSpecSeq .)


state 26

    (6) varSpec -> ID .
    (7) varSpec -> ID . IGUAL_ATRIB literal
    (8) varSpec -> ID . LCOL NUMBER RCOL
    (9) varSpec -> ID . LCOL NUMBER RCOL IGUAL_ATRIB LCHAVES literalSeq RCHAVES

    VIRGULA         reduce using rule 6 (varSpec -> ID .)
    PONTOVIRGULA    reduce using rule 6 (varSpec -> ID .)
    IGUAL_ATRIB     shift and go to state 18
    LCOL            shift and go to state 17


state 27

    (8) varSpec -> ID LCOL NUMBER . RCOL
    (9) varSpec -> ID LCOL NUMBER . RCOL IGUAL_ATRIB LCHAVES literalSeq RCHAVES

    RCOL            shift and go to state 37


state 28

    (66) literal -> FALSE .

    TERN_IF         reduce using rule 66 (literal -> FALSE .)
    PLUS            reduce using rule 66 (literal -> FALSE .)
    MINUS           reduce using rule 66 (literal -> FALSE .)
    TIMES           reduce using rule 66 (literal -> FALSE .)
    DIVIDE          reduce using rule 66 (literal -> FALSE .)
    MOD             reduce using rule 66 (literal -> FALSE .)
    IGUAL_COMP      reduce using rule 66 (literal -> FALSE .)
    DIFERENTE       reduce using rule 66 (literal -> FALSE .)
    MENOR           reduce using rule 66 (literal -> FALSE .)
    MENOR_IGUAL     reduce using rule 66 (literal -> FALSE .)
    MAIOR           reduce using rule 66 (literal -> FALSE .)
    MAIOR_IGUAL     reduce using rule 66 (literal -> FALSE .)
    OU_LOGICO       reduce using rule 66 (literal -> FALSE .)
    E_LOGICO        reduce using rule 66 (literal -> FALSE .)
    PONTOVIRGULA    reduce using rule 66 (literal -> FALSE .)
    VIRGULA         reduce using rule 66 (literal -> FALSE .)
    RPAREN          reduce using rule 66 (literal -> FALSE .)
    RCOL            reduce using rule 66 (literal -> FALSE .)
    TERN_ELSE       reduce using rule 66 (literal -> FALSE .)
    RCHAVES         reduce using rule 66 (literal -> FALSE .)


state 29

    (63) literal -> NUMBER .

    TERN_IF         reduce using rule 63 (literal -> NUMBER .)
    PLUS            reduce using rule 63 (literal -> NUMBER .)
    MINUS           reduce using rule 63 (literal -> NUMBER .)
    TIMES           reduce using rule 63 (literal -> NUMBER .)
    DIVIDE          reduce using rule 63 (literal -> NUMBER .)
    MOD             reduce using rule 63 (literal -> NUMBER .)
    IGUAL_COMP      reduce using rule 63 (literal -> NUMBER .)
    DIFERENTE       reduce using rule 63 (literal -> NUMBER .)
    MENOR           reduce using rule 63 (literal -> NUMBER .)
    MENOR_IGUAL     reduce using rule 63 (literal -> NUMBER .)
    MAIOR           reduce using rule 63 (literal -> NUMBER .)
    MAIOR_IGUAL     reduce using rule 63 (literal -> NUMBER .)
    OU_LOGICO       reduce using rule 63 (literal -> NUMBER .)
    E_LOGICO        reduce using rule 63 (literal -> NUMBER .)
    PONTOVIRGULA    reduce using rule 63 (literal -> NUMBER .)
    VIRGULA         reduce using rule 63 (literal -> NUMBER .)
    RPAREN          reduce using rule 63 (literal -> NUMBER .)
    RCOL            reduce using rule 63 (literal -> NUMBER .)
    TERN_ELSE       reduce using rule 63 (literal -> NUMBER .)
    RCHAVES         reduce using rule 63 (literal -> NUMBER .)


state 30

    (7) varSpec -> ID IGUAL_ATRIB literal .

    VIRGULA         reduce using rule 7 (varSpec -> ID IGUAL_ATRIB literal .)
    PONTOVIRGULA    reduce using rule 7 (varSpec -> ID IGUAL_ATRIB literal .)


state 31

    (64) literal -> CADEIA_CHAR .

    TERN_IF         reduce using rule 64 (literal -> CADEIA_CHAR .)
    PLUS            reduce using rule 64 (literal -> CADEIA_CHAR .)
    MINUS           reduce using rule 64 (literal -> CADEIA_CHAR .)
    TIMES           reduce using rule 64 (literal -> CADEIA_CHAR .)
    DIVIDE          reduce using rule 64 (literal -> CADEIA_CHAR .)
    MOD             reduce using rule 64 (literal -> CADEIA_CHAR .)
    IGUAL_COMP      reduce using rule 64 (literal -> CADEIA_CHAR .)
    DIFERENTE       reduce using rule 64 (literal -> CADEIA_CHAR .)
    MENOR           reduce using rule 64 (literal -> CADEIA_CHAR .)
    MENOR_IGUAL     reduce using rule 64 (literal -> CADEIA_CHAR .)
    MAIOR           reduce using rule 64 (literal -> CADEIA_CHAR .)
    MAIOR_IGUAL     reduce using rule 64 (literal -> CADEIA_CHAR .)
    OU_LOGICO       reduce using rule 64 (literal -> CADEIA_CHAR .)
    E_LOGICO        reduce using rule 64 (literal -> CADEIA_CHAR .)
    PONTOVIRGULA    reduce using rule 64 (literal -> CADEIA_CHAR .)
    VIRGULA         reduce using rule 64 (literal -> CADEIA_CHAR .)
    RPAREN          reduce using rule 64 (literal -> CADEIA_CHAR .)
    RCOL            reduce using rule 64 (literal -> CADEIA_CHAR .)
    TERN_ELSE       reduce using rule 64 (literal -> CADEIA_CHAR .)
    RCHAVES         reduce using rule 64 (literal -> CADEIA_CHAR .)


state 32

    (65) literal -> TRUE .
